# ProximalGalerkin

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  Dockerfile_dolfinx  LICENSE  README.md  eig_exp.py  environment.yml  matrix_exp.py  patrick.py  pyproject.toml
.github/workflows/: build-docker-image.yml  test_dolfinx.yml  test_firedrake.yml  test_julia.yml  test_mfem.yml
docker/: Dockerfile  Dockerfile.dolfinx  Dockerfile.firedrake  Dockerfile.julia  Dockerfile.mfem  dolfinx-mode  firedrake-mode
examples/: environment.yaml  generate_mesh.py
examples/01_obstacle_problem/: README.md  compare_all.py  generate_mesh_gmsh.py  lvpp_example.py  obstacle_finite_difference.jl  obstacle_pg.py  obstacle_snes.py  obstacle_spectral.jl  spectral.jl
examples/02_signorini/: README.md  compare_with_ipopt_galahad.py  generate_mesh.py  run_lvpp_problem.py  signorini_dolfinx.py
examples/03_fracture/: README.md  fracture_dolfinx.py  fracture_firedrake.py  generate_mesh.py
examples/04_multiphase/: README.md  multiphase_dolfinx.py
examples/05_obstacle_type_qvi/: README.md  thermoforming_dolfinx.py  thermoforming_gridap.jl  thermoforming_lvpp.py
examples/06_gradient_constraints/: README.md  gradient_constraint_dolfinx.py  script.py
examples/07_eigenvalue_constraints/: README.md  eigenvalue_constraints_dolfinx.py  eigenvalue_constraints_firedrake.py
examples/08_intersecting_constraints/: README.md  intersecting_constraints_dolfinx.py  intersecting_constraints_firedrake.py
examples/09_eikonal/: README.md  eikonal_dolfinx.py  (+1 more)
licenses/: LICENSE.surowiec
(+81 files in other folders)
